# voip2

./: Dockerfile  bodovana.yaml  compose.yaml  zaloha.yaml
asterisk/: extensions.conf  pjsip.conf
asterisk/asterisk1/: extensions.conf  pjsip.conf
asterisk/asterisk2/: extensions.conf  pjsip.conf
asterisk/etc/asterisk/: extensions.conf  modules.conf  pjsip.conf
asterisk/etc/asterisk1/: extensions.conf  pjsip.conf
asterisk/etc/asterisk2/: extensions.conf  manager.conf  modules.conf  pjsip.conf
asterisk/etc/asterisk3/: extensions.conf  pjsip.conf
fastapi/: Dockerfile  pyproject.toml
fastapi/voip2_backend/: console.py  main.py  settings.py
fastapi/voip2_backend/lib/: ami.py  schemas.py
kamailio/: Dockerfile
nginx/: Dockerfile
nginx/etc/nginx/: dhparam.pem  nginx.conf  ssl-params.conf
nginx/etc/ssl/certs/: nginx-selfsigned.crt
nginx/etc/ssl/private/: nginx-selfsigned.key
postgres/: 01-create-user.sql  Dockerfile
